[project]
name = "halo-blog"
version = "0.1.0"
description = "A lightweight personal blog system built with Python, inspired by Halo CMS"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "ArcaneCoreX-dev"},
]
readme = "README.md"
homepage = "https://github.com/ArcaneCoreX-dev/halo-blog"
repository = "https://github.com/ArcaneCoreX-dev/halo-blog"
keywords = ["blog", "cms", "fastapi", "python", "halo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "markdown>=3.7",
    "python-slugify>=8.0.4",
    "aiofiles>=24.1.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=4.0,<5.0",
    "python-jose[cryptography]>=3.3.0",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
